--- a/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
+++ b/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
@@ -1,5 +1,55 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+platzhalter {
+  display: table;
+  margin:0;
+  padding:0;
+  width: 100%;
+  hight: 100%;
+}
+
+.alerts {
+  padding: 15px;
+}
+
+.alert-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #31708f;
+}
+
+p {
+  display: block;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+}
+
+.center {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.pdf_generator {
+margin-top: 50px;
+margin-bottom: 25px;
+}
+
+.file-up {
+  padding-bottom: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 20px;
+  margin-top: 50px;
+  border-width: 5px;
+  border-style: dashed;
+  border-color: grey;
+}
+
+paltzhalter {
+  position:absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #1b6d85;
+  height: 50px;
+
 }
