--- a/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
+++ b/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
@@ -1,4 +1,4 @@
-platzhalter {
+body {
   display: table;
   margin:0;
   padding:0;
@@ -10,9 +10,9 @@ platzhalter {
   padding: 15px;
 }
 
-.alert-info {
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+.alert-infoe {
+  background-color: #EAEAEA;
+  border-color: #EAEAEA;
   color: #31708f;
 }
 
@@ -24,13 +24,8 @@ p {
   -webkit-margin-end: 0px;
 }
 
-.center {
-  margin-left: 20%;
-  margin-right: 20%;
-}
-
 .pdf_generator {
-margin-top: 50px;
+margin-top: 2%;
 margin-bottom: 25px;
 }
 
@@ -40,9 +35,10 @@ margin-bottom: 25px;
   padding-right: 40px;
   padding-top: 20px;
   margin-top: 50px;
-  border-width: 5px;
-  border-style: dashed;
-  border-color: grey;
+  margin-bottom: 2%;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #E20613;
 }
 
 paltzhalter {
@@ -52,4 +48,8 @@ paltzhalter {
   background-color: #1b6d85;
   height: 50px;
 
+}
+
+.doormat__nav {
+  font-size: 14px;
 }
