--- a/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
+++ b/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
@@ -1,10 +1,3 @@
-body {
-  display: table;
-  margin:0;
-  padding:0;
-  width: 100%;
-  hight: 100%;
-}
 
 .alerts {
   padding: 15px;
@@ -30,26 +23,23 @@ margin-bottom: 25px;
 }
 
 .file-up {
-  padding-bottom: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 20px;
-  margin-top: 50px;
+  padding-bottom: 40px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding: 40px;
+  margin-top: 60px;
   margin-bottom: 2%;
   border-width: 1px;
   border-style: solid;
   border-color: #E20613;
 }
 
-paltzhalter {
-  position:absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: #1b6d85;
-  height: 50px;
-
-}
-
 .doormat__nav {
   font-size: 14px;
 }
+
+span {
+  line-hight: 1.42857;
+  margin-left: 10px;
+}
+
