--- a/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
+++ b/pdf-ebinterface-frontend/src/main/resources/client/src/index.css
@@ -47,3 +47,23 @@ span {
   border-width: 2px;
   background-color: #E88F7A;
 }
+
+.loading-circle-1 {
+  border: 10px solid #31708f;;
+  border-radius: 50%;
+  border-top: 10px solid #E20613;
+  width: 180px;
+  height: 180px;
+  filter: blur(100%);
+  -webkit-animation:  1s infinite spin;
+  animation:  1s  infinite spin;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
